header mobile and destop version

--- a/index.html
+++ b/index.html
@@ -23,8 +23,26 @@
 </head>
 <body>
     <div id="container">
+        <header>
+            <div id="logo-container">
+                <img id="logo" src="images/logo/Booki.png" alt="logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Hébergements</a></li>
+                    <li><a href="#">Activités</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+
+        </main>
 
     </div> <!-- div#container -->
+    <!-- footer -->
+    <footer>
+
+    </footer>
 
 </body>
 </html>
