change textbox type as 'search'

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <form 
                     action="submit">
                     <div id="search-block">                        
-                        <input id="search-textbox" type="text" placeholder="Marseille,France">
+                        <input id="search-textbox" type="search" placeholder="Marseille,France">
                         <i id="search-icon" class="fas fa-map-marker-alt"></i>
                         <button id="search-submit"></button>                      
                     </div> <!-- div#accommodation-search-block -->
