rename id: accommodation-section =>  search-section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </nav>
         </header>
         <main>
-            <section id="accommodation-section">
+            <section id="search-section">
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre ville ou en plein nature</p>
                 <form 
@@ -68,8 +68,10 @@
                         
                     </div><!-- <div#accommodation-filter-block -->
                 </form>
-            </section> <!-- section#accommodation-section -->
+            </section> <!-- section#search-section -->
+            <section id="">
 
+            </section>
         </main>
 
     </div> <!-- div#container -->
