corrections on search block

--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
         <main>
             <!-- search section -->
             <section id="search-section">
-                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-                <p>En plein centre ville ou en plein nature</p>
+                <header class="search__header">
+                    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <p>En plein centre ville ou en plein nature</p>
+                </header>
                 <form action="submit">
                     <div id="search-block">
                         <input id="search-textbox" type="search" placeholder="Marseille,France">
-                        <i id="search-icon" class="fas fa-map-marker-alt"></i>
-                        <button id="search-submit"></button>
+                        <i id="search-icon" class="fas fa-map-marker-alt" aria-hidden="true"></i>
+                        <button id="search-submit" type="button"></button>
                     </div> <!-- div#accommodation-search-block -->
                     <div id=accommodation-filter-block>
 
