rectification on search module, use of flexbox instead of absolute positioning

--- a/index.html
+++ b/index.html
@@ -46,24 +46,24 @@
 
                         <div id="filter-buttons">
                             <h2>Filtres</h2>
-                            <div class="filter-button">
+                            <a class="filter-button" href="#">
                                 <i class="fas fa-money-bill-wave round-icon" aria-hidden="true"></i>
                                 <span class="button-text">Economique</span>
-                            </div>
-                            <div class="filter-button">
+                            </a>
+                            <a class="filter-button" href="#">
                                 <i class="fas fa-child round-icon" aria-hidden="true"></i>
                                 <span class="button-text">Familial</span>
-                            </div>
+                            </a>
 
-                            <div class="filter-button">
+                            <a class="filter-button" href="#">
                                 <i class="fas fa-heart round-icon" aria-hidden="true"></i>
                                 <span class="button-text">Romantique</span>
-                            </div>
+                            </a>
 
-                            <div class="filter-button">
+                            <a class="filter-button" href="#">
                                 <i class="fas fa-dog round-icon" aria-hidden="true"></i>
                                 <span class="button-text">Animaux autorisées</span>
-                            </div>
+                            </a>
                         </div> <!-- div#filter-buttons -->
                         <div id="accommodation-search-summary">
                             <i class="fas fa-info" aria-hidden="true"></i>
