--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
                                     <i class="fas fa-star blue" aria-hidden="true"></i>
                                     <i class="fas fa-star blue" aria-hidden="true"></i>
                                     <i class="fas fa-star blue" aria-hidden="true"></i>
-                                </div> 
-                            </div> 
+                                </div>
+                            </div>
                         </a>
                     </article>
                     <article class="most-populars__article">
@@ -246,8 +246,8 @@
                                     <i class="fas fa-star blue" aria-hidden="true"></i>
                                     <i class="fas fa-star blue" aria-hidden="true"></i>
                                     <i class="fas fa-star gray" aria-hidden="true"></i>
-                                </div> 
-                            </div> 
+                                </div>
+                            </div>
                         </a>
                     </article>
                     <article class="most-populars__article">
@@ -267,12 +267,12 @@
                                     <i class="fas fa-star blue" aria-hidden="true"></i>
                                     <i class="fas fa-star blue" aria-hidden="true"></i>
                                     <i class="fas fa-star gray" aria-hidden="true"></i>
-                                </div> 
-                            </div> 
+                                </div>
+                            </div>
                         </a>
                     </article>
 
-                
+
 
                 </aside>
                 <!--most-populars-aside-->
@@ -280,10 +280,83 @@
             <!--div#accommodations-container-->
 
 
-
-
             <!--activities-section-->
-            <section id="activities-section">
+
+            <section class="activities__section">
+                <header class="activities__header">
+                    <h1>Activités à Marseille</h1>
+                </header>
+                <div class="activities__article-container">
+                    <article class="activities__article">
+                        <a href="#">
+                            <div class="activities-card__imageblock">
+                                <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                                    alt="Vieux Port">
+                            </div>
+                            <div class="activities-card__bodyblock">
+                                <h2>Vieux Port</h2>                     
+                            </div> <!-- div.activities-card__bodyblock -->
+                        </a>
+                    </article>
+                    <article class="activities__article">
+                        <a href="#">
+                            <div class="activities-card__imageblock">
+                                <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                                    alt="Fort de Pomègues">
+                            </div>
+                            <div class="activities-card__bodyblock">
+                                <h2>Fort de Pomègues</h2>                     
+                            </div> <!-- div.activities-card__bodyblock -->
+                        </a>
+                    </article>
+                    <article class="activities__article">
+                        <a href="#">
+                            <div class="activities-card__imageblock">
+                                <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                                    alt="Îles du Frioul">
+                            </div>
+                            <div class="activities-card__bodyblock">
+                                <h2>Îles du Frioul</h2>                     
+                            </div> <!-- div.activities-card__bodyblock -->
+                        </a>
+                    </article>
+                    <article class="activities__article">
+                        <a href="#">
+                            <div class="activities-card__imageblock">
+                                <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                                    alt="Parc National des Calanques">
+                            </div>
+                            <div class="activities-card__bodyblock">
+                                <h2>Parc National des Calanques</h2>                     
+                            </div> <!-- div.activities-card__bodyblock -->
+                        </a>
+                    </article>
+                    <article class="activities__article">
+                        <a href="#">
+                            <div class="activities-card__imageblock">
+                                <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                                    alt="Notre-Dame-de-la-Garde">
+                            </div>
+                            <div class="activities-card__bodyblock">
+                                <h2>Notre-Dame-de-la-Garde</h2>                     
+                            </div> <!-- div.activities-card__bodyblock -->
+                        </a>
+                    </article>
+                    <article class="activities__article">
+                        <a href="#">
+                            <div class="activities-card__imageblock">
+                                <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                                    alt="Parc Longchamp">
+                            </div>
+                            <div class="activities-card__bodyblock">
+                                <h2>Parc Longchamp</h2>                     
+                            </div> <!-- div.activities-card__bodyblock -->
+                        </a>
+                    </article>
+
+                </div>
+
+
 
             </section>
             <!--activities-section-->
