--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                     alt="Vieux Port">
                             </div>
                             <div class="activities-card__bodyblock">
-                                <h2>Vieux Port</h2>                     
+                                <h2>Vieux Port</h2>
                             </div> <!-- div.activities-card__bodyblock -->
                         </a>
                     </article>
@@ -305,7 +305,7 @@
                                     alt="Fort de Pomègues">
                             </div>
                             <div class="activities-card__bodyblock">
-                                <h2>Fort de Pomègues</h2>                     
+                                <h2>Fort de Pomègues</h2>
                             </div> <!-- div.activities-card__bodyblock -->
                         </a>
                     </article>
@@ -316,7 +316,7 @@
                                     alt="Îles du Frioul">
                             </div>
                             <div class="activities-card__bodyblock">
-                                <h2>Îles du Frioul</h2>                     
+                                <h2>Îles du Frioul</h2>
                             </div> <!-- div.activities-card__bodyblock -->
                         </a>
                     </article>
@@ -327,7 +327,7 @@
                                     alt="Parc National des Calanques">
                             </div>
                             <div class="activities-card__bodyblock">
-                                <h2>Parc National des Calanques</h2>                     
+                                <h2>Parc National des Calanques</h2>
                             </div> <!-- div.activities-card__bodyblock -->
                         </a>
                     </article>
@@ -338,7 +338,7 @@
                                     alt="Notre-Dame-de-la-Garde">
                             </div>
                             <div class="activities-card__bodyblock">
-                                <h2>Notre-Dame-de-la-Garde</h2>                     
+                                <h2>Notre-Dame-de-la-Garde</h2>
                             </div> <!-- div.activities-card__bodyblock -->
                         </a>
                     </article>
@@ -349,7 +349,7 @@
                                     alt="Parc Longchamp">
                             </div>
                             <div class="activities-card__bodyblock">
-                                <h2>Parc Longchamp</h2>                     
+                                <h2>Parc Longchamp</h2>
                             </div> <!-- div.activities-card__bodyblock -->
                         </a>
                     </article>
@@ -367,6 +367,43 @@
     </div> <!-- div#container -->
     <!-- footer -->
     <footer>
+        <div class="footer-item">
+            <h2>A propos</h2>
+            <ul>
+                <li>
+                    <a href="#">Fonctionnement du site</a>
+                </li>
+                <li>
+                    <a href="#">Conditions générales de vente</a>
+                </li>
+                <li>
+                    <a href="#">Données et confidentialité</a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-item">
+            <h2>Nos hébergements</h2>
+            <ul>
+                <li>
+                    <a href="#">Charte qualité</a>
+                </li>
+                <li>
+                    <a href="#">Soumettre votre hôtel</a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-item">
+            <h2>Assistance</h2>
+            <ul>
+                <li>
+                    <a href="#">Centre d'aide</a>
+                </li>
+                <li>
+                    <a href="#">Nous contacter</a>
+                </li>
+            </ul>
+        </div>
+
 
     </footer>
 
