logo resizing, update links at main-header

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </a>
             <nav>
                 <ul>
-                    <li><a href="#accommodations-section">Hébergements</a></li>
-                    <li><a href="#">Activités</a></li>
+                    <li><a href="#accommodations">Hébergements</a></li>
+                    <li><a href="#activities">Activités</a></li>
                 </ul>
             </nav>
         </header>
@@ -76,7 +76,7 @@
 
             <div id="accommodations-container">
                 <!-- accommodations section -->
-                <section class="accommodations__section">
+                <section id="accommodations" class="accommodations__section">
                     <header class="accommodations__header">
                         <h1>Hébergements à Marseille</h1>
                     </header>
@@ -282,7 +282,7 @@
 
             <!--activities-section-->
 
-            <section class="activities__section">
+            <section id="activities" class="activities__section">
                 <header class="activities__header">
                     <h1>Activités à Marseille</h1>
                 </header>
