Adjustements on css file and add large_mobile.css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- CSS Files -->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/large_mobile.css" media="screen and (max-width:992px)">
     <link rel="stylesheet" href="./css/mobile.css" media="screen and (max-width:768px)">
 
     <title>Booki - Trouvez votre hébergement pour des vacances de rêve</title>
@@ -85,7 +86,8 @@
                             <a href="#">
                                 <div class="accommodation-card__imageblock">
                                     <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                                        alt="Auberge La Cannebière">
+                                        alt="Auberge La Cannebière"
+                                        class="card-image">
                                 </div>
                                 <div class="accommodation-card__bodyblock">
                                     <h2>Auberge La Cannebière</h2>
@@ -104,7 +106,8 @@
                             <a href="#">
                                 <div class="accommodation-card__imageblock">
                                     <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-                                        alt="Hôtel du port">
+                                        alt="Hôtel du port"
+                                        class="card-image">
                                 </div>
                                 <div class="accommodation-card__bodyblock">
                                     <h2>Hôtel du port</h2>
@@ -123,7 +126,8 @@
                             <a href="#">
                                 <div class="accommodation-card__imageblock">
                                     <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-                                        alt="Hôtel Les mouettes">
+                                        alt="Hôtel Les mouettes"
+                                        class="card-image">
                                 </div>
                                 <div class="accommodation-card__bodyblock">
                                     <h2>Hôtel Les mouettes</h2>
@@ -142,7 +146,8 @@
                             <a href="#">
                                 <div class="accommodation-card__imageblock">
                                     <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-                                        alt="Hôtel de la mer">
+                                        alt="Hôtel de la mer"
+                                        class="card-image">
                                 </div>
                                 <div class="accommodation-card__bodyblock">
                                     <h2>Hôtel de la mer</h2>
@@ -161,7 +166,8 @@
                             <a href="#">
                                 <div class="accommodation-card__imageblock">
                                     <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-                                        alt="Auberge Le Panier">
+                                        alt="Auberge Le Panier"
+                                        class="card-image">
                                 </div>
                                 <div class="accommodation-card__bodyblock">
                                     <h2>Auberge Le Panier</h2>
@@ -180,7 +186,8 @@
                             <a href="#">
                                 <div class="accommodation-card__imageblock">
                                     <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-                                        alt="Hôtel chez Amina">
+                                        alt="Hôtel chez Amina"
+                                        class="card-image">
                                 </div>
                                 <div class="accommodation-card__bodyblock">
                                     <h2>Hôtel chez Amina</h2>
@@ -212,7 +219,8 @@
                         <a href="#">
                             <div class="most-populars-card__imageblock">
                                 <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                                    alt="Hôtel Le soleil du matin">
+                                    alt="Hôtel Le soleil du matin"
+                                    class="card-image">
                             </div>
                             <div class="most-populars-card__bodyblock">
                                 <div class="popular-body-block-description">
@@ -233,7 +241,8 @@
                         <a href="#">
                             <div class="most-populars-card__imageblock">
                                 <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
-                                    alt="Au coeur de l'eau Chambres d'hôtes">
+                                    alt="Au coeur de l'eau Chambres d'hôtes"
+                                    class="card-image">
                             </div>
                             <div class="most-populars-card__bodyblock">
                                 <div class="popular-body-block-description">
@@ -254,7 +263,8 @@
                         <a href="#">
                             <div class="most-populars-card__imageblock">
                                 <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                                    alt="Hôtel Tout bleu et Blanc">
+                                    alt="Hôtel Tout bleu et Blanc"
+                                    class="card-image">
                             </div>
                             <div class="most-populars-card__bodyblock">
                                 <div class="popular-body-block-description">
@@ -291,7 +301,8 @@
                         <a href="#">
                             <div class="activities-card__imageblock">
                                 <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-                                    alt="Vieux Port">
+                                    alt="Vieux Port"
+                                    class="card-image">
                             </div>
                             <div class="activities-card__bodyblock">
                                 <h2>Vieux Port</h2>
@@ -302,7 +313,8 @@
                         <a href="#">
                             <div class="activities-card__imageblock">
                                 <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-                                    alt="Fort de Pomègues">
+                                    alt="Fort de Pomègues"
+                                    class="card-image">
                             </div>
                             <div class="activities-card__bodyblock">
                                 <h2>Fort de Pomègues</h2>
@@ -313,7 +325,8 @@
                         <a href="#">
                             <div class="activities-card__imageblock">
                                 <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
-                                    alt="Îles du Frioul">
+                                    alt="Îles du Frioul"
+                                    class="card-image">
                             </div>
                             <div class="activities-card__bodyblock">
                                 <h2>Îles du Frioul</h2>
@@ -324,10 +337,11 @@
                         <a href="#">
                             <div class="activities-card__imageblock">
                                 <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-                                    alt="Parc National des Calanques">
+                                    alt="Parc National des Calanques"
+                                    class="card-image">
                             </div>
                             <div class="activities-card__bodyblock">
-                                <h2>Parc National des Calanques</h2>
+                                <h2 class="squeezed-text">Parc National des Calanques</h2>
                             </div> <!-- div.activities-card__bodyblock -->
                         </a>
                     </article>
@@ -335,7 +349,8 @@
                         <a href="#">
                             <div class="activities-card__imageblock">
                                 <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-                                    alt="Notre-Dame-de-la-Garde">
+                                    alt="Notre-Dame-de-la-Garde"
+                                    class="card-image">
                             </div>
                             <div class="activities-card__bodyblock">
                                 <h2>Notre-Dame-de-la-Garde</h2>
@@ -346,7 +361,8 @@
                         <a href="#">
                             <div class="activities-card__imageblock">
                                 <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
-                                    alt="Parc Longchamp">
+                                    alt="Parc Longchamp"
+                                    class="card-image">
                             </div>
                             <div class="activities-card__bodyblock">
                                 <h2>Parc Longchamp</h2>
