Delete unused seletors and some little corrections

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                     <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                     <p>En plein centre ville ou en plein nature</p>
                 </header>
-                <form action="submit">
+                <form action="index.html">
                     <div id="search-block">
                         <input id="search-textbox" type="search" placeholder="Marseille,France">
                         <i id="search-icon" class="fas fa-map-marker-alt" aria-hidden="true"></i>
-                        <button id="search-submit" type="button"></button>
-                    </div> <!-- div#accommodation-search-block -->
+                        <button id="search-submit" type="submit"></button>
+                    </div> <!-- div#search-block -->
                     <div id=accommodation-filter-block>
 
                         <div id="filter-buttons">
@@ -73,7 +73,7 @@
 
                     </div><!-- <div#accommodation-filter-block -->
                 </form>
-            </section> <!-- section#search-section -->
+            </section> <!-- #search-section -->
 
             <div id="accommodations-container">
                 <!-- accommodations section -->
@@ -86,8 +86,7 @@
                             <a href="#">
                                 <div class="accommodation-card__imageblock">
                                     <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                                        alt="Auberge La Cannebière"
-                                        class="card-image">
+                                        alt="Auberge La Cannebière" class="card-image">
                                 </div>
                                 <div class="accommodation-card__bodyblock">
                                     <h2>Auberge La Cannebière</h2>
@@ -99,15 +98,14 @@
                                         <i class="fas fa-star blue" aria-hidden="true"></i>
                                         <i class="fas fa-star gray" aria-hidden="true"></i>
                                     </div> <!-- div.accommodation-card-rating -->
-                                </div> <!-- div.accommodation-card-body -->
+                                </div> <!-- div.accommodation-card__bodyblock -->
                             </a>
                         </article>
                         <article class="accommodation__article">
                             <a href="#">
                                 <div class="accommodation-card__imageblock">
                                     <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-                                        alt="Hôtel du port"
-                                        class="card-image">
+                                        alt="Hôtel du port" class="card-image">
                                 </div>
                                 <div class="accommodation-card__bodyblock">
                                     <h2>Hôtel du port</h2>
@@ -119,15 +117,14 @@
                                         <i class="fas fa-star blue" aria-hidden="true"></i>
                                         <i class="fas fa-star blue" aria-hidden="true"></i>
                                     </div> <!-- div.accommodation-card-rating -->
-                                </div> <!-- div.accommodation-card-body -->
+                                </div> <!-- div.accommodation-card__bodyblock -->
                             </a>
                         </article>
                         <article class="accommodation__article">
                             <a href="#">
                                 <div class="accommodation-card__imageblock">
                                     <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-                                        alt="Hôtel Les mouettes"
-                                        class="card-image">
+                                        alt="Hôtel Les mouettes" class="card-image">
                                 </div>
                                 <div class="accommodation-card__bodyblock">
                                     <h2>Hôtel Les mouettes</h2>
@@ -139,15 +136,14 @@
                                         <i class="fas fa-star blue" aria-hidden="true"></i>
                                         <i class="fas fa-star gray" aria-hidden="true"></i>
                                     </div> <!-- div.accommodation-card-rating -->
-                                </div> <!-- div.accommodation-card-body -->
+                                </div> <!-- div.accommodation-card__bodyblock -->
                             </a>
                         </article>
                         <article class="accommodation__article">
                             <a href="#">
                                 <div class="accommodation-card__imageblock">
                                     <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-                                        alt="Hôtel de la mer"
-                                        class="card-image">
+                                        alt="Hôtel de la mer" class="card-image">
                                 </div>
                                 <div class="accommodation-card__bodyblock">
                                     <h2>Hôtel de la mer</h2>
@@ -159,15 +155,14 @@
                                         <i class="fas fa-star gray" aria-hidden="true"></i>
                                         <i class="fas fa-star gray" aria-hidden="true"></i>
                                     </div> <!-- div.accommodation-card-rating -->
-                                </div> <!-- div.accommodation-card-body -->
+                                </div> <!-- div.accommodation-card__bodyblock -->
                             </a>
                         </article>
                         <article class="accommodation__article">
                             <a href="#">
                                 <div class="accommodation-card__imageblock">
                                     <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-                                        alt="Auberge Le Panier"
-                                        class="card-image">
+                                        alt="Auberge Le Panier" class="card-image">
                                 </div>
                                 <div class="accommodation-card__bodyblock">
                                     <h2>Auberge Le Panier</h2>
@@ -179,15 +174,14 @@
                                         <i class="fas fa-star blue" aria-hidden="true"></i>
                                         <i class="fas fa-star gray" aria-hidden="true"></i>
                                     </div> <!-- div.accommodation-card-rating -->
-                                </div> <!-- div.accommodation-card-body -->
+                                </div> <!-- div.accommodation-card__bodyblock -->
                             </a>
                         </article>
                         <article class="accommodation__article">
                             <a href="#">
                                 <div class="accommodation-card__imageblock">
                                     <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-                                        alt="Hôtel chez Amina"
-                                        class="card-image">
+                                        alt="Hôtel chez Amina" class="card-image">
                                 </div>
                                 <div class="accommodation-card__bodyblock">
                                     <h2>Hôtel chez Amina</h2>
@@ -199,7 +193,7 @@
                                         <i class="fas fa-star blue" aria-hidden="true"></i>
                                         <i class="fas fa-star blue" aria-hidden="true"></i>
                                     </div> <!-- div.accommodation-card-rating -->
-                                </div> <!-- div.accommodation-card-body -->
+                                </div> <!-- div.accommodation-card__bodyblock -->
                             </a>
                         </article>
                     </div>
@@ -219,8 +213,7 @@
                         <a href="#">
                             <div class="most-populars-card__imageblock">
                                 <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                                    alt="Hôtel Le soleil du matin"
-                                    class="card-image">
+                                    alt="Hôtel Le soleil du matin" class="card-image">
                             </div>
                             <div class="most-populars-card__bodyblock">
                                 <div class="popular-body-block-description">
@@ -241,8 +234,7 @@
                         <a href="#">
                             <div class="most-populars-card__imageblock">
                                 <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
-                                    alt="Au coeur de l'eau Chambres d'hôtes"
-                                    class="card-image">
+                                    alt="Au coeur de l'eau Chambres d'hôtes" class="card-image">
                             </div>
                             <div class="most-populars-card__bodyblock">
                                 <div class="popular-body-block-description">
@@ -263,8 +255,7 @@
                         <a href="#">
                             <div class="most-populars-card__imageblock">
                                 <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                                    alt="Hôtel Tout bleu et Blanc"
-                                    class="card-image">
+                                    alt="Hôtel Tout bleu et Blanc" class="card-image">
                             </div>
                             <div class="most-populars-card__bodyblock">
                                 <div class="popular-body-block-description">
@@ -301,8 +292,7 @@
                         <a href="#">
                             <div class="activities-card__imageblock">
                                 <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-                                    alt="Vieux Port"
-                                    class="card-image">
+                                    alt="Vieux Port" class="card-image">
                             </div>
                             <div class="activities-card__bodyblock">
                                 <h2>Vieux Port</h2>
@@ -313,8 +303,7 @@
                         <a href="#">
                             <div class="activities-card__imageblock">
                                 <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-                                    alt="Fort de Pomègues"
-                                    class="card-image">
+                                    alt="Fort de Pomègues" class="card-image">
                             </div>
                             <div class="activities-card__bodyblock">
                                 <h2>Fort de Pomègues</h2>
@@ -325,8 +314,7 @@
                         <a href="#">
                             <div class="activities-card__imageblock">
                                 <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
-                                    alt="Îles du Frioul"
-                                    class="card-image">
+                                    alt="Îles du Frioul" class="card-image">
                             </div>
                             <div class="activities-card__bodyblock">
                                 <h2>Îles du Frioul</h2>
@@ -337,8 +325,7 @@
                         <a href="#">
                             <div class="activities-card__imageblock">
                                 <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-                                    alt="Parc National des Calanques"
-                                    class="card-image">
+                                    alt="Parc National des Calanques" class="card-image">
                             </div>
                             <div class="activities-card__bodyblock">
                                 <h2 class="squeezed-text">Parc National des Calanques</h2>
@@ -349,8 +336,7 @@
                         <a href="#">
                             <div class="activities-card__imageblock">
                                 <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-                                    alt="Notre-Dame-de-la-Garde"
-                                    class="card-image">
+                                    alt="Notre-Dame-de-la-Garde" class="card-image">
                             </div>
                             <div class="activities-card__bodyblock">
                                 <h2>Notre-Dame-de-la-Garde</h2>
@@ -361,19 +347,14 @@
                         <a href="#">
                             <div class="activities-card__imageblock">
                                 <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
-                                    alt="Parc Longchamp"
-                                    class="card-image">
+                                    alt="Parc Longchamp" class="card-image">
                             </div>
                             <div class="activities-card__bodyblock">
                                 <h2>Parc Longchamp</h2>
                             </div> <!-- div.activities-card__bodyblock -->
                         </a>
                     </article>
-
                 </div>
-
-
-
             </section>
             <!--activities-section-->
 
@@ -419,8 +400,6 @@
                 </li>
             </ul>
         </div>
-
-
     </footer>
 
 </body>
